src/css/darkmode.css
:root {
  --cheese: #ffd72c;
  --crust: #ffb10b;
  --sauce: #f9565b;
  --roni: #dc453f;
  --bg: #f5f4e2;
  --black: #676550;
  --t: transparent;
  --sausage: #b0926d;
  --pineapple: #ffffa2;
  --pepper: #4cad7b;
}

.slider {
  position: relative;
  width: 100px;
  height: 50px;
  background-color: gray;
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
  border-top-left-radius: 50px;
  border-bottom-left-radius: 50px;
}

input[type="checkbox"].checkbox-round {
  opacity: 0;
  display: inline-block;
  position: absolute;
  width: 100px;
  height: 100%;
  vertical-align: middle;
  border: 1px solid #ddd;
  appearance: none;
  -webkit-appearance: none;
  outline: none;
  border-radius: 100%;
  transition: 0.2s ease-in-out;
  z-index: 999;
}

.pizza {
  position: absolute;
  left: 5px;
  top: 5px;
  width: 50%;
  height: 100%;
  border-radius: 100%;
  transition: 0.2s ease-in-out;
}

.pizza .inner {
  position: absolute;
  left: -5px;
  top: -5px;
  width: 100%;
  height: 100%;
  background: linear-gradient(
      45deg,
      transparent,
      transparent 49%,
      #f8c900 49%,
      #f8c900 51%,
      transparent 51%
    ),
    linear-gradient(
      -45deg,
      transparent,
      transparent 49%,
      #f8c900 49%,
      #f8c900 51%,
      transparent 51%
    ),
    linear-gradient(
      90deg,
      transparent,
      transparent 49%,
      #f8c900 49%,
      #f8c900 51%,
      transparent 51%
    ),
    linear-gradient(
      180deg,
      transparent,
      transparent 49%,
      #f8c900 49%,
      #f8c900 51%,
      transparent 51%
    ),
    #ffd72c;
  box-shadow: inset 0 0 0 10px #ffb10b;
  border-radius: 100%;
}

.checkbox-round:checked {
  transition: all 2s ease-in-out;
  animation: pizzaflip 0.75s ease-in-out forwards;
}

.checkbox-round:checked ~ .pizza {
  transition: all 2s ease-in-out;
  animation: pizzaflip 0.5s ease-in-out forwards;
}

@keyframes pizzaflip {
  100% {
    transform: translateX(50px);
  }
}

